# annotate

./: .travis.yml  CMakeLists.txt  README.md  labels.txt  main.cpp
include/: convert.h  image_label.h  imagewidget.h  label.h  loadfiles.h  parse_config.h  partitioning.h  window.h
